unpackaged/main/default/objects/Treasury_Mgmt__c/Treasury_Mgmt__c.object-meta.xml
<CustomObject>
    <label>Treasury Mgmt</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Treasury Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treasury Mgmt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>