unpackaged/main/default/objects/Treasury_Mgmt__c/fields/COGS_Install_Labor__c.field-meta.xml
<CustomField>
    <fullName>COGS_Install_Labor__c</fullName>
    <formula>Opportunity__r.Labor_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS - Install Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>