unpackaged/main/default/objects/Treasury_Mgmt__c/fields/COGS_Materials__c.field-meta.xml
<CustomField>
    <fullName>COGS_Materials__c</fullName>
    <formula>Opportunity__r.Equipment_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS - Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>