unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>Treasury Mgmt</relationshipLabel>
    <relationshipName>Treasury_Mgmt</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>