unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Commissions_Expense__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Expense__c</fullName>
    <formula>Case( Opportunity__r.X3rd_Party_Partner__c , "Carolina Connections",


 Commission__r.Total_Commissions_Value__c  + (300* Opportunity__r.System_Size_Calculated_kW__c ),

 Commission__r.Total_Commissions_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>