unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Corporate_Profit_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Profit_Balance_Due__c</fullName>
    <formula>Corporate_Profit_Draw__c -  Corporate_Profit_Paid_to_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Profit Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>