unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Corporate_Profit_Draw__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Profit_Draw__c</fullName>
    <formula>Solar_Install_Gross_Margin_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>