unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Corporate_Profit_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Profit_Paid_to_Date__c</fullName>
    <formula>CRC_Corporate_Profit_Actual_Paid__c +  Install_Corporate_Profit_Actual_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Profit Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>