unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Corporate_Profit_True_Up__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Profit_True_Up__c</fullName>
    <formula>IF( CRC_Corporate_Profit_Paid__c = True,


M1_Corporate_Profit_Draw__c - CRC_Corporate_Profit_Actual_Paid__c,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Profit True Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>