unpackaged/main/default/objects/Treasury_Mgmt__c/fields/CRC_Corporate_Profit_Clawback__c.field-meta.xml
<CustomField>
    <fullName>CRC_Corporate_Profit_Clawback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRC - Corporate Profit Clawback</label>
    <type>Checkbox</type>
</CustomField>