unpackaged/main/default/objects/Treasury_Mgmt__c/fields/CRC_Corporate_Profit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>CRC_Corporate_Profit_Paid_Date__c</fullName>
    <label>CRC - Corporate Profit Paid Date</label>
    <type>Date</type>
</CustomField>