unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Dealer_Fee_Expense__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Expense__c</fullName>
    <formula>Opportunity__r.Dealer_Fee_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>