unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Dealer_Fees_Pending__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees_Pending__c</fullName>
    <formula>Opportunity__r.Dealer_Fee_Calc__c *

IF( ISBLANK( Opportunity__r.Installation_Complete_Date__c ) = True, 

IF( Opportunity__r.Milestone_Payment_1_Complete__c = False, 

1, 
IF(AND( Opportunity__r.Milestone_Payment_1_Complete__c = True, Opportunity__r.Financier_Milestone_1_Approved_Date__c &lt; (Today()-1)), 
CASE(Opportunity__r.Financing_Tool__c ,  
"Sunlight", 0.6 , 
"Loan Pal", 1,  
0), 
0)), 

IF( Opportunity__r.IC_Approved__c = False, 
 
IF(Opportunity__r.Milestone_Payment_1_Complete__c = False, 1, 
Case(Opportunity__r.Financing_Tool__c , 
"Sunlight", 0.6 ,  
0) 
), 

Case( Opportunity__r.Financing_Tool__c ,  
"Sunlight", 0.2 ,  
0)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fees Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>