unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Design_Fees__c.field-meta.xml
<CustomField>
    <fullName>Design_Fees__c</fullName>
    <formula>600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>