unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Design_Permitting_Interconnection_QC__c.field-meta.xml
<CustomField>
    <fullName>Design_Permitting_Interconnection_QC__c</fullName>
    <formula>Design_Fees__c + Permit_Fees__c + Interconnection_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design, Permitting, Interconnection, QC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>