unpackaged/main/default/objects/Treasury_Mgmt__c/fields/EIP_Interest_Calc__c.field-meta.xml
<CustomField>
    <fullName>EIP_Interest_Calc__c</fullName>
    <formula>0.02 *  ( Commissions_Expense__c + COGS_Materials__c + COGS_Install_Labor__c + Design_Permitting_Interconnection_QC__c + Sales_Tax_Expense__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIP Interest Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>