unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <formula>Text(Opportunity__r.Financing_Tool__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financier</label>
    <type>Text</type>
</CustomField>