unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Install_Corporate_Profit_Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Install_Corporate_Profit_Actual_Paid__c</fullName>
    <label>Install - Corporate Profit (Actual Paid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>