unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Install_Corporate_Profit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Install_Corporate_Profit_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install - Corporate Profit Paid</label>
    <type>Checkbox</type>
</CustomField>