unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Install_Corporate_Profit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Corporate_Profit_Paid_Date__c</fullName>
    <label>Install - Corporate Profit Paid Date</label>
    <type>Date</type>
</CustomField>