unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Interconnection_Fees__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Fees__c</fullName>
    <formula>Case(  Opportunity__r.Location__c , "South Carolina", 100, "North Carolina", 100, "New Jersey", 55,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interconnection Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>