unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M0_Cash_In__c.field-meta.xml
<CustomField>
    <fullName>M0_Cash_In__c</fullName>
    <formula>Case(  Financier__c , "Sunlight", 0.4 *  (Opportunity__r.Amount -  Dealer_Fee_Expense__c ) , "Sunnova Lease", 0.4 *  Opportunity__r.Amount, "Cash",  Opportunity__r.Initial_Invoice_Amount_Calc__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M0 Cash In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>