unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M0_Payback__c.field-meta.xml
<CustomField>
    <fullName>M0_Payback__c</fullName>
    <formula>Case(  Financier__c , "Sunlight",

IF( Opportunity__r.Milestone_Payment_1_Complete__c = False,  M0_Cash_In__c , 0),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M0 Payback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>