unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M1_Cash_In__c.field-meta.xml
<CustomField>
    <fullName>M1_Cash_In__c</fullName>
    <formula>Case( Financier__c , 
"Sunlight", 0.4 * (Opportunity__r.Amount -  Dealer_Fee_Expense__c) , 
"Sunnova Lease", 0.4 * Opportunity__r.Amount, 
"Cash", 0.6 * Opportunity__r.Amount , 
"Loan Pal",Opportunity__r.Amount -  Dealer_Fee_Expense__c  ,
"Mosaic Loan", 0.78 * Opportunity__r.Amount,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M1 Cash In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>