unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M1_Corporate_Profit_Draw__c.field-meta.xml
<CustomField>
    <fullName>M1_Corporate_Profit_Draw__c</fullName>
    <formula>0.8 *  Corporate_Profit_Draw__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRC - Corporate Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>