unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M2_Cash_In__c.field-meta.xml
<CustomField>
    <fullName>M2_Cash_In__c</fullName>
    <formula>Case( Financier__c , "Sunlight", 0.2 * (Opportunity__r.Amount - Dealer_Fee_Expense__c ) , "Sunnova Lease", 0.2 * Opportunity__r.Amount, "Cash",  Opportunity__r.Final_Invoice_Amount_Calc__c, "Mosaic Loan", 0.1 * Opportunity__r.Amount  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M2 Cash In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>