unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M2_Corporate_Profit_Draw__c.field-meta.xml
<CustomField>
    <fullName>M2_Corporate_Profit_Draw__c</fullName>
    <formula>(0.2 * Corporate_Profit_Draw__c) +  Corporate_Profit_True_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install - Corporate Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>