unpackaged/main/default/objects/Treasury_Mgmt__c/fields/M3_Commissions__c.field-meta.xml
<CustomField>
    <fullName>M3_Commissions__c</fullName>
    <formula>IF(ISBLANK( Commission__r.Milestone_3_Actual_Paid__c )=False,Commission__r.Milestone_3_Actual_Paid__c,	Commission__r.Milestone_3_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M3 Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>