unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Panel_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Panel_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Type</label>
    <type>Text</type>
</CustomField>