unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Permit_Fees__c.field-meta.xml
<CustomField>
    <fullName>Permit_Fees__c</fullName>
    <formula>IF((Opportunity__r.Permit_Amount__c +  Opportunity__r.Business_License_Fee__c)&gt;0,Opportunity__r.Permit_Amount__c +  Opportunity__r.Business_License_Fee__c,350)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>