unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Sales_Tax_Expense__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Expense__c</fullName>
    <formula>Opportunity__r.Material_Cost_for_Use_Tax_Actual__c * Case( Opportunity__r.Location__c , "South Carolina", 0.075, "North Carolina", 0.0725, "Illinois", 0.08, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>