unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Install_COGS__c.field-meta.xml
<CustomField>
    <fullName>Solar_Install_COGS__c</fullName>
    <formula>COGS_Materials__c +  COGS_Install_Labor__c +  Commissions_Expense__c +  Dealer_Fee_Expense__c +  Design_Permitting_Interconnection_QC__c +  Sales_Tax_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Install COGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>