unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Install_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Solar_Install_Gross_Margin__c</fullName>
    <formula>Solar_Revenue__c -  Solar_Install_COGS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Install Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>