unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Install_Gross_Margin_Value__c.field-meta.xml
<CustomField>
    <fullName>Solar_Install_Gross_Margin_Value__c</fullName>
    <label>Solar Install Gross Margin Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>