unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Install_Gross_Margin_Watt__c.field-meta.xml
<CustomField>
    <fullName>Solar_Install_Gross_Margin_Watt__c</fullName>
    <formula>Solar_Install_Gross_Margin__c /  Opportunity__r.System_Size_Calculated_kW__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Install Gross Margin / Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>