unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Install_Gross_MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>Solar_Install_Gross_MarginPercent__c</fullName>
    <formula>Solar_Install_Gross_Margin__c /  Solar_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Install Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>