unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Solar_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Solar_Revenue__c</fullName>
    <formula>Commission__r.Downpayment__c +  Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Install Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>