unpackaged/main/default/objects/Treasury_Mgmt__c/fields/System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_DC__c</fullName>
    <formula>Opportunity__r.System_Size_Calculated_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Size kW (DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>