unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <formula>Text(Opportunity__r.Utility__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Provider</label>
    <type>Text</type>
</CustomField>