unpackaged/main/default/objects/Treasury_Mgmt__c/fields/Warranty_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Reserve__c</fullName>
    <formula>400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>