unpackaged/main/default/objects/Treasury_Mgmt__c/fields/X3rd_Party_Partner__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Partner__c</fullName>
    <formula>Text( Opportunity__r.X3rd_Party_Partner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Partner</label>
    <type>Text</type>
</CustomField>